fixed styling bug where homepage social buttons stack unevenly

--- a/client/src/styles/_button.scss
+++ b/client/src/styles/_button.scss
@@ -84,7 +84,7 @@
       display: none;
       margin-left: 5px;
 
-      @include for-tablet-landscape-up() {
+      @media screen and (min-width: 1260px) {
         display: inline;
       }
     }
